# projectpilot-agent

./: .gitignore  README.md  pyproject.toml
docs/: projectpilot_project_pitch.md  projectpilot_scope.md  tool_schema_design.md  workflow_design.md
docs/demo/: incomplete_project_analysis_case.md  raghub_analysis_case.md  raghub_eval100_workflow_case.md
docs/interview/: projectpilot_interview_questions.md
docs/resume/: projectpilot_resume_evidence_update.md
examples/: incomplete_project.yaml  projectpilot.yaml  raghub_eval100.yaml
examples/incomplete_project/: README.md
projectpilot/: __init__.py  cli.py  config.py
projectpilot/agent/: __init__.py  agent_run.py  planner.py  tool_router.py
projectpilot/analyzers/: __init__.py  commit_advisor.py  consistency_checker.py  eval_metrics_reader.py  llm_interview_asset_writer.py  llm_raghub_risk_reviewer.py  llm_raghub_task_planner.py  llm_resume_asset_writer.py  (+5 more)
tests/: test_agent_planner.py  test_agent_run.py  test_cli.py  test_commit_advisor.py  test_consistency_checker.py  test_context_reader.py  test_eval_metrics_reader.py  test_git_reader.py  test_human_feedback.py  test_llm_client_factory.py  test_llm_interview_asset_writer.py  test_llm_raghub_risk_reviewer.py  test_llm_raghub_task_planner.py  test_llm_resume_asset_writer.py  test_llm_review_advisor.py  test_project_status_analyzer.py  test_raghub_delivery_analyzer.py  test_raghub_phase4_workflow.py  test_readme_advisor.py  test_report_writer.py  test_risk_advisor.py  test_tool_call_log.py  test_tool_router.py  test_tool_schema.py  test_workflow_run.py
(+22 files in other folders)
