[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "projectpilot-agent"
version = "0.1.0"
description = "Workflow-first delivery management agent skeleton for AI engineering projects."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "ProjectPilot" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[project.scripts]
projectpilot = "projectpilot.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--basetemp=.pytest_tmp"
